--- a/src/main/webapp/views/responsable/rRechercheVue.html
+++ b/src/main/webapp/views/responsable/rRechercheVue.html
@@ -23,7 +23,7 @@
       <th >Telephone</th>
       <th >Mail</th>
       <th >Identifiant</th>
-      <th >Mot de passe</th>
+      <th >Agence</th>
     </tr>
   </thead>
   <tbody>
@@ -32,6 +32,7 @@
       <td>{{responsable.telPerso}}</td>
       <td>{{responsable.mail}}</td>
       <td>{{responsable.identifiant}}</td>
+      <td>{{responsable.agence.nom}}</td>
     </tr>
    
   </tbody>
