--- a/src/main/webapp/views/responsable/rAjoutVue.html
+++ b/src/main/webapp/views/responsable/rAjoutVue.html
@@ -31,6 +31,12 @@
       <input type="password" class="form-control" id="idMdp" placeholder="Mot de passe" ng-model="rForm.mdp">
     </div>
   </div>
+   <div class="form-group">
+    <label for="idAgence" class="col-sm-2 control-label">Agence</label>
+    <div class="col-sm-5">
+      <input type="number" class="form-control" id="idAgence" placeholder="Agence" ng-model="rForm.agence.id">
+    </div>
+  </div>
   
   
   <div class="form-group">
