--- a/src/main/webapp/views/cs/cSAjoutVue.html
+++ b/src/main/webapp/views/cs/cSAjoutVue.html
@@ -1,32 +1,63 @@
 <h2>Formulaire d'ajout d'une classe standard</h2>
-<br/>
-Type de bien <select class="form-control" ng-model="csForm.typeBien">
-  <option value="">choisissez un type de bien</option>
-  <option value="maison">Maison</option>
-  <option value="appartement">Appartement</option>
-  <option value="studio">Studio</option>
-  <option value="entrepot">Entrepot</option>
-  <option value="emplacement">Emplacement</option>
-  <option value="terrain">Terrain</option>
-</select>
-<br/>
-mode d'offre <div class="radio">
-  <label>
-    <input type="radio" name="offre" value="a louer" ng-model="csForm.modeOffre">
-    en location
-  </label>
-</div>
-<div class="radio">
-  <label>
-    <input type="radio" name="offre" value="a vendre" ng-model="csForm.modeOffre">
-   en vente
-  </label>
-</div>
-<br/>
-prix maximum <input type="number" placeholder="prix max" ng-model="csForm.prixMax">
-<br/>
-superficie minimum<input type="number" placeholder="superficie min" ng-model="csForm.superficieMin">
-<br/>
-<input type="button" value="Ajouter" ng-click="ajout()" >
-<br/>
+<br />
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="Nom" class="col-sm-2 control-label">Nom</label>
+		<div class="col-sm-10">
+			<input type="text" class="form-control" id="Nom" placeholder="Nom"
+				ng-model="csForm.nom" />
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="bien" class="col-sm-2 control-label">Type de bien</label>
+		<div class="col-sm-10">
+			<select class="form-control" ng-model="csForm.typeBien">
+				<option value="">choisissez un type de bien</option>
+				<option value="maison">Maison</option>
+				<option value="appartement">Appartement</option>
+				<option value="studio">Studio</option>
+				<option value="entrepot">Entrepot</option>
+				<option value="emplacement">Emplacement</option>
+				<option value="terrain">Terrain</option>
+			</select>
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="inputPassword3" class="col-sm-2 control-label">Mode
+			de l'offre</label>
+		<div class="col-sm-10">
+			<div class="radio">
+				<label> <input type="radio" name="offre" value="a louer"
+					ng-model="csForm.modeOffre"> En location
+				</label>
+			</div>
+			<div class="radio">
+				<label> <input type="radio" name="offre" value="a vendre"
+					ng-model="csForm.modeOffre"> En vente
+				</label>
+			</div>
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="prix" class="col-sm-2 control-label">Prix maximum</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="prix"
+				placeholder="Prix" ng-model="csForm.prixMax" />
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="sup" class="col-sm-2 control-label">Superficie
+			minimum</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="sup"
+				placeholder="superficie min" ng-model="csForm.superficieMin" />
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<input type="button" class="btn btn-default" value="Ajouter"
+				ng-click="ajout()">
+		</div>
+	</div>
+</form>
 <h3>{{msg}}</h3>
