--- a/src/main/webapp/views/cs/cSRechercheVue.html
+++ b/src/main/webapp/views/cs/cSRechercheVue.html
@@ -8,12 +8,14 @@ ID : <input type="number" placeholder="identifiant" ng-model="id" >
 <h1>Informations de la classe standard</h1>
 <table class="table table-striped">
 	<tr>
+		<th>nom</th>
 		<th>type de Bien</th>
 		<th>mode d'offre</th>
 		<th>prix Max</th>
 		<th>superficie Min</th>
 	</tr>
 	<tr>
+		<td>{{cs.nom}}</td>
 		<td>{{cs.typeBien}}</td>
 		<td>{{cs.modeOffre}}</td>
 		<td>{{cs.prixMax}}</td>
