--- a/src/main/webapp/views/cs/cSRechercheVue.html
+++ b/src/main/webapp/views/cs/cSRechercheVue.html
@@ -1,9 +1,20 @@
 <h2>Formulaire de recherche d'une classe standard</h2>
 <br/>
-ID : <input type="number" placeholder="identifiant" ng-model="id" >
-<br/>
-<input type="button" value="Rechercher" ng-click="recherche()" >
-<br/>
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="id" class="col-sm-2 control-label">ID</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="id" placeholder="ID"
+				ng-model="id" />
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<input type="button" class="btn btn-default" value="Rechercher" ng-click="recherche()">
+		</div>
+	</div>
+</form>
+
 <div ng-show="indice">
 <h1>Informations de la classe standard</h1>
 <table class="table table-striped">
