--- a/src/main/webapp/views/agence/aListeVue.html
+++ b/src/main/webapp/views/agence/aListeVue.html
@@ -3,7 +3,7 @@
 	<tr>
 		<th>Nom</th>
 		<th>Rue</th>
-		<th>Code Postale</th>
+		<th>Code Postal</th>
 		<th>Ville</th>
 		<th>Pays</th>
 		<th>Liens</th>
