--- a/src/main/webapp/views/agence/aSupprVue.html
+++ b/src/main/webapp/views/agence/aSupprVue.html
@@ -1,6 +1,17 @@
 <h2>Formulaire de suppression d'une agence</h2>
 <br/>
-ID : <input type="number" placeholder="identifiant" ng-model="id" >
-<br/>
-<input type="button" value="Rechercher" ng-click="suppr()" >
-<br/>
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="id" class="col-sm-2 control-label">ID</label>
+		<div class="col-sm-10">
+			<input type="number" class="form-control" id="id" placeholder="ID"
+				ng-model="id">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-10">
+			<input type="button" class="btn btn-default" value="Supprimer"
+				ng-click="suppr()">
+		</div>
+	</div>
+</form>
