--- a/src/main/webapp/views/bl/bLSupprVue.html
+++ b/src/main/webapp/views/bl/bLSupprVue.html
@@ -1,7 +1,19 @@
 <h2>Formulaire de suppression d'un Bien immobilier en location</h2>
-<br/>
-ID <input type="number" placeholder="ID" ng-model="id">
-<br/>
-<input type="button" value="Supprimer" ng-click="supprimer()" >
-<br/>
+<br />
+<br />
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="id" class="col-md-2 control-label">ID</label>
+		<div class="col-md-6">
+			<input type="number" class="form-control" id="id" ng-model="id">
+		</div>
+	</div>
+	<br />
+	<div class="form-group">
+		<div class="col-md-offset-2 col-md-10">
+			<input type="button" class="btn btn-default" value="Supprimer" ng-click="supprimer()">
+		</div>
+	</div>
+</form>
+
 <h3>{{msg}}</h3>
