--- a/src/main/webapp/views/bl/bLAjoutVue.html
+++ b/src/main/webapp/views/bl/bLAjoutVue.html
@@ -1,7 +1,8 @@
 <h2>Formulaire d'ajout d'un Bien immobilier en location</h2>
 <br />
 <form class="form-horizontal">
-	<div class="col-md-6" style="border-right-style: solid; border-right-color: lightgrey;">
+	<div class="col-md-6"
+		style="border-right-style: solid; border-right-color: lightgrey;">
 		<div class="form-group">
 			<label class="col-md-4 control-label">Type de bien</label>
 			<div class="col-md-6">
@@ -34,8 +35,8 @@
 		<div class="form-group">
 			<label for="desc" class="col-md-4 control-label">Description</label>
 			<div class="col-md-6">
-				<input type="text" class="form-control" id="desc"
-					placeholder="description" ng-model="blForm.description">
+				<textarea class="form-control" rows="7" id="desc"
+					placeholder="description" ng-model="blForm.description"></textarea>
 			</div>
 		</div>
 		<div class="form-group">
@@ -78,6 +79,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+
+
+	<div class="col-md-6">
 		<div class="form-group">
 			<label for="photo" class="col-md-4 control-label">Photo
 				descriptive</label>
@@ -87,11 +93,6 @@
 					base-sixty-four-input multiple>
 			</div>
 		</div>
-	</div>
-
-
-
-	<div class="col-md-6">
 		<div class="form-group">
 			<label for="loyer" class="col-md-4 control-label">Loyer
 				Mensuel</label>
@@ -123,7 +124,7 @@
 					ng-model="blForm.typeBail">
 			</div>
 		</div>
-		<hr/>
+		<hr />
 		<div class="form-group">
 			<label for="no" class="col-md-4 control-label">Num&eacutero
 				de rue</label>
