--- a/src/main/webapp/views/bl/bLModifVue.html
+++ b/src/main/webapp/views/bl/bLModifVue.html
@@ -42,8 +42,8 @@
 		<div class="form-group">
 			<label for="desc" class="col-md-4 control-label">Description</label>
 			<div class="col-md-6">
-				<input type="text" class="form-control" id="desc"
-					placeholder="description" ng-model="blForm.description">
+				<textarea class="form-control" rows="7" id="desc"
+					placeholder="description" ng-model="blForm.description"></textarea>
 			</div>
 		</div>
 		<div class="form-group">
@@ -86,6 +86,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+
+
+	<div class="col-md-6">
 		<div class="form-group">
 			<label for="photo" class="col-md-4 control-label">Photo
 				descriptive</label>
@@ -95,11 +100,6 @@
 					base-sixty-four-input multiple>
 			</div>
 		</div>
-	</div>
-
-
-
-	<div class="col-md-6">
 		<div class="form-group">
 			<label for="loyer" class="col-md-4 control-label">Loyer
 				Mensuel</label>
