--- a/src/main/webapp/views/bv/bVAjoutVue.html
+++ b/src/main/webapp/views/bv/bVAjoutVue.html
@@ -1,60 +1,147 @@
 <h2>Formulaire d'ajout d'un Bien immobilier en vente</h2>
-<br/>
-Type de Bien
-<select class="form-control" ng-model="bvForm.typeBien">
-  <option value="">choisissez un type de bien</option>
-  <option value="maison">Maison</option>
-  <option value="appartement">Appartement</option>
-  <option value="studio">Studio</option>
-  <option value="entrepot">Entrepot</option>
-  <option value="emplacement">Emplacement</option>
-  <option value="terrain">Terrain</option>
-</select>
-<br/>
-Statut
-<div class="radio">
-  <label>
-    <input type="radio" name="statut" value="disponible" ng-model="bvForm.statut">
-    Disponible
-  </label>
-</div>
-<div class="radio">
-  <label>
-    <input type="radio" name="statut" value="achete" ng-model="bvForm.statut">
-    Achet&eacute
-  </label>
-</div>
-<br/>
-Revenu cadastral <input type="number" placeholder="revenu" ng-model="bvForm.revenuCadastre">
-<br/>
-Description <input type="text" placeholder="description" ng-model="bvForm.description">
-<br/>
-Date de soumission <input type="date" placeholder="date" ng-model="bvForm.dateSoumission">
-<br/>
-Date de disposition <input type="date" placeholder="date" ng-model="bvForm.dateDisposition">
-<br/>
-Photo descriptive <input type="file" placeholder="image" ng-model="bvForm.photos" accept="image/*" base-sixty-four-input multiple>
-<br/>
-Prix d'achat demand&eacute <input type="number" placeholder="prix" ng-model="bvForm.prix">
-<br/>
-Etat
-<select class="form-control" ng-model="bvForm.etat">
-  <option value="">choisissez un &eacutetat</option>
-  <option value="a restaurer">A restaurer</option>
-  <option value="correct">Correct</option>
-  <option value="impeccable">Impeccable</option>
-</select>
-<br/>
-Num&eacutero de rue <input type="number" placeholder="Num&eacutero" ng-model="bvForm.adresse.numRue">
-<br/>
-Rue <input type="text" placeholder="rue" ng-model="bvForm.adresse.rue">
-<br/>
-Code Postal <input type="text" placeholder="code postal" ng-model="bvForm.adresse.cp">
-<br/>
-Ville <input type="text" placeholder="ville" ng-model="bvForm.adresse.localite">
-<br/>
-Pays <input type="text" placeholder="pays" ng-model="bvForm.adresse.pays">
-<br/>
-<input type="button" value="Ajouter" ng-click="ajouter()" >
-<br/>
+<br />
+<form class="form-horizontal">
+	<div class="col-md-6"
+		style="border-right-style: solid; border-right-color: lightgrey;">
+		<div class="form-group">
+			<label class="col-md-4 control-label">Type de bien</label>
+			<div class="col-md-6">
+				<select class="form-control" ng-model="bvForm.typeBien">
+					<option value="">choisissez un type de bien</option>
+					<option value="maison">Maison</option>
+					<option value="appartement">Appartement</option>
+					<option value="studio">Studio</option>
+					<option value="entrepot">Entrepot</option>
+					<option value="emplacement">Emplacement</option>
+					<option value="terrain">Terrain</option>
+				</select>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="col-md-4 control-label">Statut</label>
+			<div class="col-md-6">
+				<div class="radio">
+					<label> <input type="radio" name="statut"
+						value="disponible" ng-model="bvForm.statut"> Disponible
+					</label>
+				</div>
+				<div class="radio">
+					<label> <input type="radio" name="statut" value="loue"
+						ng-model="bvForm.statut"> Lou&eacute
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="desc" class="col-md-4 control-label">Description</label>
+			<div class="col-md-6">
+				<textarea class="form-control" rows="7" id="desc"
+					placeholder="description" ng-model="bvForm.description"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="rev" class="col-md-4 control-label">Revenu
+				cadastral</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="rev"
+					placeholder="revenu" ng-model="bvForm.revenuCadastre">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="date" class="col-md-4 control-label">Date de
+				soumission</label>
+			<div class="col-md-6">
+				<input type="date" class="form-control" id="date" placeholder="date"
+					ng-model="bvForm.dateSoumission">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="date" class="col-md-4 control-label">Date de
+				disposition</label>
+			<div class="col-md-6">
+				<input type="date" class="form-control" id="date" placeholder="date"
+					ng-model="bvForm.dateDisposition">
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="col-md-6">
+		<div class="form-group">
+			<label for="prix" class="col-md-4 control-label">Prix
+				demand&eacute</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="prix"
+					placeholder="prix" ng-model="bvForm.prix">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="photo" class="col-md-4 control-label">Photo
+				descriptive</label>
+			<div class="col-md-6">
+				<input type="file" class="form-control" id="photo"
+					placeholder="image" ng-model="bvForm.photos" accept="image/*"
+					base-sixty-four-input multiple>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="col-md-4 control-label">Etat</label>
+			<div class="col-md-6">
+				<select class="form-control" ng-model="bvForm.etat">
+					<option value="">choisissez un &eacutetat</option>
+					<option value="a restaurer">A restaurer</option>
+					<option value="correct">Correct</option>
+					<option value="impeccable">Impeccable</option>
+				</select>
+			</div>
+		</div>
+		<hr />
+		<div class="form-group">
+			<label for="no" class="col-md-4 control-label">Num&eacutero
+				de rue</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="no"
+					placeholder="Num&eacutero" ng-model="bvForm.adresse.numRue">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="rue" class="col-md-4 control-label">Rue</label>
+			<div class="col-md-6">
+				<input type="text" class="form-control" id="rue" placeholder="rue"
+					ng-model="bvForm.adresse.rue">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="cp" class="col-md-4 control-label">Code Postal</label>
+			<div class="col-md-6">
+				<input type="text" class="form-control" id="cp"
+					placeholder="code postal" ng-model="bvForm.adresse.cp">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="ville" class="col-md-4 control-label">Ville</label>
+			<div class="col-md-6">
+				<input type="text" class="form-control" id="ville"
+					placeholder="ville" ng-model="bvForm.adresse.localite">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="pays" class="col-md-4 control-label">Pays</label>
+			<div class="col-md-6">
+				<input type="text" class="form-control" id="pays" placeholder="pays"
+					ng-model="bvForm.adresse.pays">
+			</div>
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-md-offset-2 col-md-10">
+			<input type="button" class="btn btn-default" value="Ajouter"
+				ng-click="ajouter()">
+
+		</div>
+	</div>
+
+</form>
+
 <h3>{{msg}}</h3>
