--- a/src/main/webapp/views/contrat/coModifVue.html
+++ b/src/main/webapp/views/contrat/coModifVue.html
@@ -1,18 +1,48 @@
-<h2 style="color : aquamarine; text-align: center">Formulaire de modification de contrat</h2>
-<br/>
-<label>Numero du contrat</label>
-<input type="text" placeholder="Numero" ng-model="coModif.id">
-<br/>
-<label>Type de mandat</label>
-<select class="form-control" ng-model="coModif.type">
-  <option value="">choisissez un type de contrat</option>
-  <option value="exclusif">Exclusif</option>
-  <option value="simple">Simple</option>
-  <option value="sous-mandat">Sous-mandat</option>
-</select>
-<br/>
-<label>Date d'acquisition</label>
-<input type="datetime" placeholder="Date" ng-model="coModif.dateAcquisition">
-<br/>
-<input type="button" value="Ajouter" ng-click="modif()">
+<h2 style="color : aquamarine; text-align: center">Formulaire de modifiaction d'un contrat</h2>
+<form class="form-horizontal">
+<div class="form-group">
+    <label for="idId" class="col-sm-2 control-label">ID</label>
+    <div class="col-sm-5">
+      <input type="number" class="form-control" id="idId" ng-model="contrat.id">
+    </div>
+  </div>
+ <div class="form-group">
+    <label for="idID" class="col-sm-2 control-label">Type de mandat</label>
+    <div class="col-sm-5">
+      <select class="form-control" id="idType" ng-model="contrat.type">
+		  <option value="">choisissez un type de contrat</option>
+		  <option value="exclusif">Exclusif</option>
+		  <option value="simple">Simple</option>
+		  <option value="sous-mandat">Sous-mandat</option>
+		</select>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="idDate" class="col-sm-2 control-label">Date</label>
+    <div class="col-sm-5">
+      <input type="date" id="idDate" placeholder="Entrez une date" ng-model="contrat.dateAcquisition">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="idClient" class="col-sm-2 control-label">Client acquereur</label>
+    <div class="col-sm-5">
+      <input type="number" class="form-control" id="idClient" ng-model="contrat.client.id">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="idVisite" class="col-sm-2 control-label">Visite</label>
+    <div class="col-sm-5">
+      <input type="number" class="form-control" id="idVisite" ng-model="contrat.visite.id">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-default" ng-click="modif()">Modifier</button>
+    </div>
+  </div>
+  
+</form>
+
 <h3>{{msg}}</h3>
