--- a/src/main/webapp/views/bl/bLAjoutVue.html
+++ b/src/main/webapp/views/bl/bLAjoutVue.html
@@ -1,8 +1,17 @@
 <h2>Formulaire d'ajout d'un Bien immobilier en location</h2>
 <br />
 <form class="form-horizontal">
+
 	<div class="col-md-6"
 		style="border-right-style: solid; border-right-color: lightgrey;">
+		<div class="form-group">
+			<label for="cs" class="col-md-4 control-label">Classe
+				standard li&eacutee</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="cs"
+					ng-model="blForm.classeStandard.id">
+			</div>
+		</div>
 		<div class="form-group">
 			<label class="col-md-4 control-label">Type de bien</label>
 			<div class="col-md-6">
@@ -85,6 +94,13 @@
 
 	<div class="col-md-6">
 		<div class="form-group">
+			<label for="proprio" class="col-md-4 control-label">Propri&eacutetaire</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="proprio"
+					ng-model="blForm.proprietaire.id">
+			</div>
+		</div>
+		<div class="form-group">
 			<label for="photo" class="col-md-4 control-label">Photo
 				descriptive</label>
 			<div class="col-md-6">
@@ -130,7 +146,7 @@
 				de rue</label>
 			<div class="col-md-6">
 				<input type="number" class="form-control" id="no"
-					placeholder="Num&eacutero" ng-model="blForm.adresse.numRue">
+					placeholder="Numero" ng-model="blForm.adresse.numRue">
 			</div>
 		</div>
 		<div class="form-group">
