--- a/src/main/webapp/views/bl/bLModifVue.html
+++ b/src/main/webapp/views/bl/bLModifVue.html
@@ -2,14 +2,22 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-md-2 control-label">ID</label>
-		<div class="col-md-6">
+		<label for="id" class="col-md-4 control-label">R&eacutef&eacuterence du Bien</label>
+		<div class="col-md-4">
 			<input type="number" class="form-control" id="id"
 				ng-model="blForm.id">
 		</div>
 	</div>
 	<div class="col-md-6"
 		style="border-right-style: solid; border-right-color: lightgrey;">
+		<div class="form-group">
+			<label for="cs" class="col-md-4 control-label">Classe
+				standard li&eacutee</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="cs"
+					ng-model="blForm.classeStandard.id">
+			</div>
+		</div>
 		<div class="form-group">
 			<label class="col-md-4 control-label">Type de bien</label>
 			<div class="col-md-6">
@@ -92,6 +100,13 @@
 
 	<div class="col-md-6">
 		<div class="form-group">
+			<label for="proprio" class="col-md-4 control-label">Propri&eacutetaire</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="proprio"
+					ng-model="blForm.proprietaire.id">
+			</div>
+		</div>
+		<div class="form-group">
 			<label for="photo" class="col-md-4 control-label">Photo
 				descriptive</label>
 			<div class="col-md-6">
@@ -137,7 +152,7 @@
 				de rue</label>
 			<div class="col-md-6">
 				<input type="number" class="form-control" id="no"
-					placeholder="Num&eacutero" ng-model="blForm.adresse.numRue">
+					placeholder="Numero" ng-model="blForm.adresse.numRue">
 			</div>
 		</div>
 		<div class="form-group">
