--- a/src/main/webapp/views/bv/bVAjoutVue.html
+++ b/src/main/webapp/views/bv/bVAjoutVue.html
@@ -4,6 +4,14 @@
 	<div class="col-md-6"
 		style="border-right-style: solid; border-right-color: lightgrey;">
 		<div class="form-group">
+			<label for="cs" class="col-md-4 control-label">Classe
+				standard li&eacutee</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="cs"
+					ng-model="bvForm.classeStandard.id">
+			</div>
+		</div>
+		<div class="form-group">
 			<label class="col-md-4 control-label">Type de bien</label>
 			<div class="col-md-6">
 				<select class="form-control" ng-model="bvForm.typeBien">
@@ -69,6 +77,13 @@
 
 	<div class="col-md-6">
 		<div class="form-group">
+			<label for="proprio" class="col-md-4 control-label">Propri&eacutetaire</label>
+			<div class="col-md-6">
+				<input type="number" class="form-control" id="proprio"
+					ng-model="bvForm.proprietaire.id">
+			</div>
+		</div>
+		<div class="form-group">
 			<label for="prix" class="col-md-4 control-label">Prix
 				demand&eacute</label>
 			<div class="col-md-6">
@@ -102,7 +117,7 @@
 				de rue</label>
 			<div class="col-md-6">
 				<input type="number" class="form-control" id="no"
-					placeholder="Num&eacutero" ng-model="bvForm.adresse.numRue">
+					placeholder="Numero" ng-model="bvForm.adresse.numRue">
 			</div>
 		</div>
 		<div class="form-group">
